Tests/Good/Else/else2.tig
if 12 then "abc" else for i:=1 to n-1 do n*(n-i) 